--- a/odoo_customer_portal/wizard/customer_login_account_view.xml
+++ b/odoo_customer_portal/wizard/customer_login_account_view.xml
@@ -4,44 +4,44 @@
 <!-- "License URL : <https://store.webkul.com/license.html/>" -->
 <odoo>
     <data>
-    <record id="id_wk_vendor_portal_account_wzard" model="ir.ui.view">
-            <field name="name">vendor login account configuration</field>
-            <field name="model">vendor.login.account</field>
+    <record id="id_wk_customer_portal_account_wzard" model="ir.ui.view">
+            <field name="name">Customer login account configuration</field>
+            <field name="model">customer.login.account</field>
             <field name="arch" type="xml">
-                <form string="vendor Account">
+                <form string="Customer Account">
                     <group colspan="6">
                         <div>
                             <p>
-                                Vendor Account for this vendor already exist.
+                                Customer Account for this Customer already exist.
                                 <br/>
                                 Wants to send reset password URL?.
                             </p>
                         </div>
                     </group>
                     <footer>
-                        <button string="Send Reset Vendor Password Instruction" type="object" name="create_vendor_acocunt" icon="fa-mail-forward" class="oe_highlight"/>
+                        <button string="Send Reset customer Password Instruction" type="object" name="create_customer_acocunt" icon="fa-mail-forward" class="oe_highlight"/>
                         <button string="Cancel" class='oe_link' special="cancel"/>
                     </footer>
                 </form>
             </field>
         </record>
 
-        <record id="id_wk_vendor_portal_account_wzard2" model="ir.ui.view">
-              <field name="name">vendor login account configuration2</field>
-              <field name="model">vendor.login.account</field>
+        <record id="id_wk_customer_portal_account_wzard2" model="ir.ui.view">
+              <field name="name">customer login account configuration2</field>
+              <field name="model">customer.login.account</field>
               <field name="arch" type="xml">
-                  <form string="vendor Account">
+                  <form string="customer Account">
                         <group colspan="4">
                             <div>
                                 <p>
-                                    A new portal user will be created with vendor name and email address.
+                                    A new portal user will be created with customer name and email address.
                                     <br/>
-                                    Vendor will recieve an email with a sign-up URL.
+                                    customer will recieve an email with a sign-up URL.
                                 </p>
                             </div>
                         </group>
                       <footer>
-                          <button string="Send Vendor Login/Signup Invitation" type="object" name="create_vendor_acocunt" icon="fa-user-plus" class="oe_highlight"/>
+                          <button string="Send customer Login/Signup Invitation" type="object" name="create_customer_acocunt" icon="fa-user-plus" class="oe_highlight"/>
                           <button string="Cancel" class='oe_link' special="cancel"/>
                       </footer>
                   </form>
