--- a/oe_kemoxon_delivery_custom/report/invoice_report_template.xml
+++ b/oe_kemoxon_delivery_custom/report/invoice_report_template.xml
@@ -68,6 +68,10 @@
                     <br/>
                     <span t-field="o.partner_id.state_id.name"/>
                 </t>
+                <t t-if="o.is_vtd_ids">
+                    <br/>
+                    <span t-field="o.partner_id.vat"/>
+                </t>
                 <br/>
                 <br/>
                 <br/>
