--- a/oe_kemoxon_delivery_custom/views/account_move_views.xml
+++ b/oe_kemoxon_delivery_custom/views/account_move_views.xml
@@ -18,7 +18,7 @@
                     <field name="picking_id"/>
                 </xpath>
                 <xpath expr="//group/group[@id='header_left_group']" position="inside">
-                    <field name="is_vtd_ids"/>
+                    <field name="show_vat_ids"/>
                 </xpath>
             </field>
         </record>
