--- a/oe_kemoxon_delivery_custom/report/invoice_report_template.xml
+++ b/oe_kemoxon_delivery_custom/report/invoice_report_template.xml
@@ -70,7 +70,7 @@
                 </t>
                 <t t-if="o.show_vat_ids">
                     <br/>
-                    VAT ID:&#160;<span t-field="o.partner_id.vat"/>
+                    VAT ID:&#160;&#160;<span t-field="o.partner_id.vat"/>
                 </t>
                 <br/>
                 <br/>
