--- a/oe_kemoxon_delivery_custom/report/invoice_report_template.xml
+++ b/oe_kemoxon_delivery_custom/report/invoice_report_template.xml
@@ -68,6 +68,10 @@
                     <br/>
                     <span t-field="o.partner_id.state_id.name"/>
                 </t>
+                <t t-if="o.show_vat_ids">
+                    <br/>
+                    VAT ID:&#160;&#160;<span t-field="o.partner_id.vat"/>
+                </t>
                 <br/>
                 <br/>
                 <br/>
@@ -433,13 +437,21 @@
                         <span class="o_force_ltr" t-field="company.phone"/>
                         -
                         <span t-field="company.email"/>
+                        <t t-if="o.show_vat_ids">
+                            <t t-if="company.vat">
+                                &#160;-&#160;<t t-out="company.country_id.vat_label or 'VAT ID'"/>:
+                                <span t-field="company.vat"/>
+                            </t>
+                        </t>
                     </li>
                     <!--                                    <li t-if="company.website" >-->
                     <!--                                        <span t-field="company.website"/>-->
                     <!--                                    </li>-->
-                    <li t-if="company.vat"><t t-out="company.country_id.vat_label or 'Tax ID'"/>:
-                        <span t-field="company.vat"/>
-                    </li>
+                    <!-- <t t-if="o.show_vat_ids">
+                        <li t-if="company.vat"><t t-out="company.country_id.vat_label or 'VAT ID'"/>:
+                            <span t-field="company.vat"/>
+                        </li>
+                    </t> -->
                 </ul>
                 <div t-if="report_type == 'pdf'" class="text-muted" style="margin-top: -20px; text-align: right;">
                     Page:
