--- a/oe_kemoxon_delivery_custom/report/invoice_report_template.xml
+++ b/oe_kemoxon_delivery_custom/report/invoice_report_template.xml
@@ -5,7 +5,15 @@
             <t t-call="web.external_layout">
                 <div style="border-top: 2px solid black; margin-top: -12px;"/>
                 <center>
-                    <b style="font-size:35px;" class="text-center">INVOICE</b>
+                    <b>
+                            <span t-if="o.move_type == 'out_invoice' and o.state == 'posted'" style="font-size:35px;" class="text-center">Invoice</span>
+                            <span t-if="o.move_type == 'out_invoice' and o.state == 'draft'" style="font-size:35px;" class="text-center">Draft Invoice</span>
+                            <span t-if="o.move_type == 'out_invoice' and o.state == 'cancel'" style="font-size:35px;" class="text-center">Cancelled Invoice</span>
+                            <span t-if="o.move_type == 'out_refund'" style="font-size:35px;" class="text-center">Credit Note</span>
+                            <span t-if="o.move_type == 'in_refund'" style="font-size:35px;" class="text-center">Vendor Credit Note</span>
+                            <span t-if="o.move_type == 'in_invoice'" style="font-size:35px;" class="text-center">Vendor Bill</span>
+                            <span t-if="o.name != '/'" t-field="o.name"/>
+                        </b>
                 </center>
                 <div style="border: 1px solid black;"/>
                 <br/>
@@ -13,9 +21,9 @@
                     <div class="col-4">
                         <div class="row">
                             <div class="col-4">
-                                <strong>Invoice No :</strong>
+                                <strong>Invoice No.</strong>
                                 <br/>
-                                <strong>Deal Ref :</strong>
+                                <p t-if="o.deal_ref"><strong>Deal Ref</strong></p>
                             </div>
                             <div class="col-2"/>
                             <br/>
@@ -30,9 +38,9 @@
                     <div class="col-6">
                         <div class="row">
                             <div class="col-4">
-                                <strong>Date :</strong>
+                                <strong>Date</strong>
                                 <br/>
-                                <strong>Due Date :</strong>
+                                <strong>Due Date</strong>
                             </div>
                             <div class="col-1"/>
                             <br/>
@@ -40,7 +48,7 @@
                                 <span class="m-0" t-field="o.invoice_date"
                                       t-options='{"widget": "date","format": "dd/MM/yyyy"}'/>
                                 <br/>
-                                <span class="m-0" t-field="o.invoice_date"
+                                <span class="m-0" t-field="o.invoice_date_due"
                                       t-options='{"widget": "date","format": "dd/MM/yyyy"}'/>
                             </div>
                         </div>
@@ -202,10 +210,10 @@
                 <div style="border-top: 2px solid black;"/>
                 <br/>
                 <div class="row">
-                    <div class="col-4">
+                    <div class="col-6">
                         <t t-if="o.delivery_location">
                             <div class="row">
-                                <div class="col-5">
+                                <div class="col-3">
                                     <strong>Delivery Location</strong>
                                 </div>
                                 <br/>
@@ -217,11 +225,11 @@
                         </t>
                         <t t-if="o.invoice_incoterm_id">
                             <div class="row">
-                                <div class="col-4">
+                                <div class="col-3">
                                     <strong>Incoterms</strong>
                                 </div>
                                 <br/>
-                                <div class="col-2"/>
+                                <div class="col-1"/>
                                 <div class="col-6">
                                     <span class="m-0" t-field="o.invoice_incoterm_id"/>
                                 </div>
@@ -230,11 +238,11 @@
 
                         <t t-if="o.bill_date">
                             <div class="row">
-                                <div class="col-4">
+                                <div class="col-3">
                                     <strong>B/L Date</strong>
                                 </div>
                                 <br/>
-                                <div class="col-2"/>
+                                <div class="col-1"/>
                                 <div class="col-6">
                                     <span class="m-0" t-field="o.bill_date"
                                           t-options='{"widget": "date","format": "dd/MM/yyyy"}'/>
@@ -244,11 +252,11 @@
 
                         <t t-if="o.vessel_name">
                             <div class="row">
-                                <div class="col-4">
+                                <div class="col-3">
                                     <strong>Vessel Name</strong>
                                 </div>
                                 <br/>
-                                <div class="col-2"/>
+                                <div class="col-1"/>
                                 <div class="col-6">
                                     <span class="m-0" t-field="o.vessel_name"/>
                                 </div>
@@ -350,7 +358,7 @@
                                 <strong>Intermediary Bank</strong>
                             </div>
                             <div class="col-7" style="padding-left: 0px;">
-                                <t t-if="doc.partner_id.company_bank_account_id">
+                                <t t-if="o.partner_id.company_bank_account_id">
                                     <span class="m-0"
                                           t-field="o.partner_id.company_bank_account_id.inter_mediatory_bank_id.name"/>
                                 </t>
@@ -481,5 +489,3 @@
         <field name="paperformat_id" ref="paperformat_invoice_portrait"/>
     </record>
 </odoo>
-
-
